# forge-run

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.observability.yml  docker-compose.yml
.github/workflows/: ci.yml
config/: .env.default  .env.dev  default.toml
config/observability/: grafana-dashboard.json  grafana-dashboard.yml  otel-collector.yml  prometheus.yml  promtail.yml
docs/: errors.md  observability.md  plan.md  queue_worker.md  specification.md  tools.md
migrations/: 0001_init.sql  0002_queue.sql  0003_webhooks.sql  0004_add_callback_events.sql
src/: config.rs  main.rs
src/application/: context.rs  mod.rs
src/application/contracts/: repositories.rs
src/application/shared/: api_key_helpers.rs  api_key_types.rs  mod.rs
src/application/usecases/: cancel_job.rs  claim_next_job.rs  cleanup_retention.rs  create_api_key.rs  create_client.rs  deliver_webhooks.rs  get_job.rs  get_report.rs  heartbeat_job.rs  mod.rs  queue_due_jobs.rs  register_webhook.rs  renew_api_key.rs  requeue_expired_leases.rs  retry_job.rs  revoke_api_key.rs  run_worker_once.rs  scheduler.rs  submit_job.rs  unregister_webhook.rs  worker.rs  worker_loop.rs  worker_manager.rs
src/config/: env.rs
src/domain/: mod.rs
src/domain/entities/: client.rs  event.rs  job.rs  mod.rs  report.rs
src/domain/services/: idempotency_policy.rs  job_catalog.rs  job_definition.rs  job_lifecycle.rs  job_state_machine.rs  mod.rs  retry_policy.rs
src/domain/value_objects/: ids.rs  mod.rs  timestamps.rs
src/domain/workflows/: mod.rs  retry_policy.rs  state_machine.rs  work_catalog.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: redis.rs
src/infrastructure/db/: database.rs  mod.rs  postgres.rs
src/infrastructure/db/dto/: api_key.rs  client.rs  event.rs  idempotency_key.rs  job.rs  mod.rs  report.rs  webhook.rs  webhook_delivery.rs
src/infrastructure/db/postgres/: api_key_store_postgres.rs  client_store_postgres.rs  database.rs  event_store_postgres.rs  idempotency_key_store_postgres.rs  job_store_postgres.rs  mod.rs  postgres.rs  report_store_postgres.rs  webhook_delivery_store_postgres.rs  webhook_store_postgres.rs
src/infrastructure/db/repositories/: api_key_repository.rs  client_repository.rs  event_repository.rs  mod.rs  (+6 more)
src/infrastructure/queue/: adapter.rs
src/interface/http/: auth.rs  mod.rs  problem.rs  state.rs  trace.rs
tests/: api_key_http_integration.rs  atomicity_integration.rs  auth_integration.rs  cleanup_retention_integration.rs  client_repository_integration.rs  event_repository_integration.rs  health.rs  job_http_integration.rs  job_lifecycle_postgres_integration.rs  job_repository_integration.rs  problem_http_integration.rs  report_repository_integration.rs  requeue_expired_leases_integration.rs  run_worker_once_integration.rs  scheduler_integration.rs  webhook_delivery_integration.rs  webhook_delivery_stats_integration.rs  webhook_http_integration.rs
(+28 files in other folders)
