[package]
name = "forge-run"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["trace"] }
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "time",
] }
redis = { version = "0.25", features = ["tokio-comp"] }
time = { version = "0.3.46", features = ["formatting", "serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
thiserror = "2.0.18"
async-trait = "0.1.89"
config = "0.14"

[dev-dependencies]
insta = "1"
proptest = "1"
tower = { version = "0.4", features = ["util"] }
